WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
156325
Page tiles are missing when graphics acceleration is unavailable
https://bugs.webkit.org/show_bug.cgi?id=156325
Summary
Page tiles are missing when graphics acceleration is unavailable
Simon Fraser (smfr)
Reported
2016-04-06 18:00:35 PDT
Page tiles are missing when graphics acceleration is unavailable
Attachments
Patch
(6.12 KB, patch)
2016-04-06 18:03 PDT
,
Simon Fraser (smfr)
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2016-04-06 18:03:56 PDT
Created
attachment 275840
[details]
Patch
Tim Horton
Comment 2
2016-04-06 18:06:35 PDT
Comment on
attachment 275840
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=275840&action=review
> Source/WebCore/platform/graphics/ca/TileController.cpp:504 > + // IOSurface::maximumSize() can return { INT_MAX, INT_MAX } when hardware acceleration is unavailable, so clamp to a reasonable value. > + const int kMaxAllowableTileSize = 32 * 1024; > + surfaceSizeLimit = surfaceSizeLimit.shrunkTo({ kMaxAllowableTileSize, kMaxAllowableTileSize });
I wonder if we can make it so that the IOSurface wrapper makes it harder to get this wrong, instead of depending on callers to do work to get it right.
Simon Fraser (smfr)
Comment 3
2016-04-06 18:21:20 PDT
https://trac.webkit.org/r199130
Simon Fraser (smfr)
Comment 4
2016-04-06 18:47:15 PDT
Windows build fix in
https://trac.webkit.org/r199133
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug